fix active sidebar on mobile

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -9,10 +9,13 @@
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 999;
+  backdrop-filter: blur(var(--blur-xsm));
 }
 
 .sidebar.active {
-  max-width: var(--width);
+  min-width: var(--width);
+  position: fixed;
 }
 
 .content {
